Added Constants Class

--- a/LionsTruck/force-app/main/default/classes/L_OpportunityLineItem_TL.cls
+++ b/LionsTruck/force-app/main/default/classes/L_OpportunityLineItem_TL.cls
@@ -8,6 +8,7 @@ public without sharing class L_OpportunityLineItem_TL {
         
         Decimal trucksCounter = 0;
         Decimal servicesCounter = 0;
+        Decimal servicesValue = 0;
         
         for(Id oppId : oppLIPerOpportunityIdMap.keySet()){
             trucksCounter = 0;
@@ -15,12 +16,14 @@ public without sharing class L_OpportunityLineItem_TL {
             for(OpportunityLineItem oppLIObj : oppLIPerOpportunityIdMap.get(oppId)){
                 trucksCounter += oppLIObj.Quantity;
                 if(oppLIObj.L_AddedService__c){
-                   servicesCounter += oppLIObj.Quantity; 
+                   servicesCounter += oppLIObj.Quantity;
+                   servicesValue += oppLIObj.TotalPrice;
                 }
             }
             
             opportunitiesMap.get(oppId).L_TrucksQuantity__c = trucksCounter;
             opportunitiesMap.get(oppId).L_ServicesQuantity__c = servicesCounter;
+            opportunitiesMap.get(oppId).L_ServicesAmount__c = servicesValue * L_Constants.TRUCK_SERVICE_PERCENTAGE;
         }
         
         update opportunitiesMap.values();        
