--- a/LionsTruck/force-app/main/default/classes/L_Constants.cls
+++ b/LionsTruck/force-app/main/default/classes/L_Constants.cls
@@ -1,3 +1,5 @@
 public without sharing class L_Constants {
 	public static final Decimal TRUCK_SERVICE_PERCENTAGE = 0.1;
+    public static final String ORDERPAID_STATUS = 'Paid';
+    public static final String OPP_CLOSED_STATUS = 'Closed Won';
 }
