Added received Order Status

--- a/LionsTruck/force-app/main/default/classes/L_Constants.cls
+++ b/LionsTruck/force-app/main/default/classes/L_Constants.cls
@@ -1,5 +1,6 @@
 public without sharing class L_Constants {
 	public static final Decimal TRUCK_SERVICE_PERCENTAGE = 0.1;
     public static final String ORDERPAID_STATUS = 'Paid';
+    public static final String ORDERRECEIVED_STATUS = 'Received';
     public static final String OPP_CLOSED_STATUS = 'Closed Won';
 }
