--- a/LionsTruck/force-app/main/default/classes/L_ServiceInteraction_TL.cls
+++ b/LionsTruck/force-app/main/default/classes/L_ServiceInteraction_TL.cls
@@ -5,12 +5,10 @@ public class L_ServiceInteraction_TL {
         Set<Id> assetIDs = getAssetsIds(serviceInteractionList);
         List<Asset> assetsToUpdate = new List<Asset>();
         List<Asset> assetsFromServices = L_QueryHandler.getAssetsWithVINByIds(assetIDs);
-        String guid;
         sObject sObjAsset;
         
         for(Asset assetObj : assetsFromServices){
-            guid = L_GuidUtility.newGuid();
-            L_Integration_TL.updateAssetInformation(assetObj.id, L_Constants.INT_ENDPOINTURL_VALUE,  L_Constants.HTTP_METHOD_GET, 120000, L_Constants.INT_CLIENTID_APINAME, L_Constants.INT_CLIENTSECRET_VALUE, guid);
+            L_Integration_TL.updateAssetInformation(assetObj.id, L_Constants.INT_ENDPOINTURL_VALUE,  L_Constants.HTTP_METHOD_GET, 120000, L_Constants.INT_CLIENTID_APINAME, L_Constants.INT_CLIENTSECRET_VALUE, assetObj.SerialNumber);
         }
         
         update assetsToUpdate;
