Added method descriptions

--- a/LionsTruck/force-app/main/default/classes/L_ChartController.cls
+++ b/LionsTruck/force-app/main/default/classes/L_ChartController.cls
@@ -1,11 +1,16 @@
 public class L_ChartController {
-    
+
+    /*************************************************************************************************
+    * @Author:      Stuart Martinho
+    * @Date:       07/05/2021
+    * @Description: This method is used to get the dataset needed (Assets records)
+    to be rendered on the Chart LC,   
+    **************************************************************************************************/    
     @AuraEnabled
     public static List<DataSet> getDataSet(id accountId){
         List<Asset> result = L_QueryHandler.getAssetsByAccountIds(new Set<id>{accountId});
         Map<String, Integer> nameCounterMap = new Map<String, Integer>();
         List<DataSet> dataSet = new List<DataSet>();
-        system.debug('result->'+result.size());
         
         if(result.isEmpty())
         {
@@ -23,15 +28,25 @@ public class L_ChartController {
         
         prepareDataSet(dataSet, nameCounterMap);
         
-        return dataSet ; 
+        return dataSet; 
     }
     
+    /*************************************************************************************************
+    * @Author:      Stuart Martinho
+    * @Date:       07/05/2021
+    * @Description: This method is used to populate the data set from the Assets Name of the Map parameter.
+    **************************************************************************************************/
     public static void prepareDataSet(List<DataSet> dataSet, Map<String, Integer> nameCounterMap){
         for(String nameStr : nameCounterMap.keySet()){
             dataSet.add(new DataSet(nameStr, nameCounterMap.get(nameStr)));
         }
     }
     
+    /*************************************************************************************************
+    * @Author:      Stuart Martinho
+    * @Date:       07/05/2021
+    * @Description: Class created to have easier handling way for front end side (LC).
+    **************************************************************************************************/
     public class DataSet{
         public DataSet(String label ,Decimal count){
             this.label  = label ; 
