--- a/LionsTruck/force-app/main/default/classes/L_OrderHandler.cls
+++ b/LionsTruck/force-app/main/default/classes/L_OrderHandler.cls
@@ -27,8 +27,7 @@ public with sharing class L_OrderHandler extends L_TriggerHandler {
 	}
 	
 	public override void afterUpdate() {
-        List<Order> paidOrders = L_Order_TL.filterPaidOrders(newList);
-        L_Order_TL.closeOpportunity(L_Order_TL.filterPaidOrders(paidOrders));
+        L_Order_TL.closeOpportunity(L_Order_TL.filterReceivedOrders(newList));
 	}
 
 	/*
